--- a/.github/workflows/auto_test.yml
+++ b/.github/workflows/auto_test.yml
@@ -13,8 +13,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest]
-        python-version: ["3.12", "3.11", "3.10", "3.9", "3.8", "pypy-3.10"]
+        os: [ubuntu-latest, windows-latest]
+        python-version: ["3.13", "3.12"]
 
     steps:
     - uses: actions/checkout@v4
