--- a/.github/workflows/templates/publish_to_testpypi.yml
+++ b/.github/workflows/templates/publish_to_testpypi.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
-        python-version: "3.9"
+        python-version: "3.12"
     - name: Install pypa/build
       run: >-
         python3 -m
@@ -38,7 +38,7 @@ jobs:
 
     environment:
       name: testpypi
-      url: https://test.pypi.org/p/ducktools-<PACKAGENAMEHERE>
+      url: https://test.pypi.org/p/duckpy
 
     permissions:
       id-token: write  # IMPORTANT: mandatory for trusted publishing
