--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,29 +1,33 @@
 [build-system]
 requires = [
     "setuptools>=64",
+    "setuptools-scm>=8",
 ]
 build-backend = "setuptools.build_meta"
 
 [project]
 name="duckpy"
-description="A Python installer, manager and runner, written in Python. Windows only (for now)."
+description="A TUI for managing Python runtimes and installs"
 authors = [
   { name="David C Ellis" },
 ]
 readme="README.md"
-requires-python = "~=3.13.0"
+requires-python = ">=3.12.0"
 dependencies = [
-    "ducktools-pythonfinder>=0.6.5",
-    "ducktools-lazyimporter>=0.7.1",
-    "ducktools-classbuilder>=0.7.4",
+    "ducktools-pythonfinder>=0.7.3",
+    "textual~=1.0",
+    "shellingham~=1.5",
 ]
 classifiers = [
     "Development Status :: 1 - Planning",
+    "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
     "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
-    "Operating System :: Microsoft :: Windows",
 ]
 dynamic = ['version']
+
+[project.scripts]
+"duckpy" = "duckpy:main"
 
 [project.optional-dependencies]
 testing = ["pytest", "pytest-cov"]
@@ -31,8 +35,12 @@ testing = ["pytest", "pytest-cov"]
 [tool.setuptools.packages.find]
 where = ["src"]
 
-[tool.setuptools.dynamic]
-version = {attr = "duckpy.__version__"}
+[tool.setuptools_scm]
+version_file = "src/duckpy/_version.py"
+version_file_template = """
+__version__ = "{version}"
+__version_tuple__ = {version_tuple}
+"""
 
 [tool.pytest.ini_options]
 addopts= "--cov=src/ --cov-report=term-missing"
