Rename to ducktools-pytui

--- a/.github/workflows/templates/publish_to_testpypi.yml
+++ b/.github/workflows/templates/publish_to_testpypi.yml
@@ -38,7 +38,7 @@ jobs:
 
     environment:
       name: testpypi
-      url: https://test.pypi.org/p/duckpy
+      url: https://test.pypi.org/p/ducktools-pytui
 
     permissions:
       id-token: write  # IMPORTANT: mandatory for trusted publishing
