--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,9 +14,10 @@ authors = [
 readme="README.md"
 requires-python = ">=3.12.0"
 dependencies = [
-    "ducktools-pythonfinder>=0.7.3",
+    "ducktools-pythonfinder>=0.7.6",
     "textual~=1.0",
     "shellingham~=1.5",
+    "pip>=24.0",
 ]
 classifiers = [
     "Development Status :: 1 - Planning",
