--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,8 @@ authors = [
 readme="README.md"
 requires-python = ">=3.10.0"
 dependencies = [
-    "ducktools-pythonfinder>=0.7.6",
+    "ducktools-classbuilder>=0.7.5",
+    "ducktools-pythonfinder>=0.7.8",
     "textual>=1.0",
     "shellingham~=1.5",
     "pip~=25.0",
