--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,6 +55,7 @@ addopts= "--cov=src/ --cov-report=term-missing"
 testpaths = [
     "tests",
 ]
+asyncio_mode = "auto"
 
 [tool.pyright]
 typeCheckingMode = "off"
