--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ dev = [
     "pytest-cov>=6.1",
     "pytest-asyncio>=1.0",
     "mypy>=1.16",
+    "pytest-rerunfailures>=15.1",
 ]
 
 [tool.setuptools.packages.find]
