--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,9 @@ description="A TUI for managing Python runtimes and installs"
 authors = [
   { name="David C Ellis" },
 ]
-readme="README.md"
+readme = "README.md"
+license = "MIT"
+license-files = ["LICENSE"]
 requires-python = ">=3.10"
 dependencies = [
     "ducktools-classbuilder>=0.10.0",
@@ -26,7 +28,6 @@ classifiers = [
     "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
     "Programming Language :: Python :: 3.14",
-    "License :: OSI Approved :: MIT License",
 ]
 dynamic = ['version']
 
